kbuild: Add support for LLVM's Polly optimizer
This adds support for compiling the kernel with optimizations offered
by LLVM's polyhedral loop optimizer known as Polly, which can improve
performance by improving cache locality in loops. Note that LLVM is not
compiled with Polly by default -- it must be enabled explicitly.

Divyanshu-Modi:
 1) Moving Kconfig option for polly to init/Kconfig.
 2) Pass polly flags to assembler as well.

Tashar02:
 1) Pass polly flags to linker flags as well.
 2) Update polly flags according to clang 15.

Javashin:
 1) Pass new polly flags according to LLVM docs.

cyberknight777:
 1) Adapt to 5.18 Polly implementation.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Signed-off-by: Divyanshu-Modi <divyan.m05@gmail.com>
Signed-off-by: Tashfin Shakeer Rhythm <tashfinshakeerrhythm@gmail.com>
Signed-off-by: Carlos Jimenez (JavaShin-X) <javashin1986@gmail.com>
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -109,6 +109,14 @@ config THREAD_INFO_IN_TASK
 	  One subtle change that will be needed is to use try_get_task_stack()
 	  and put_task_stack() in save_thread_stack_tsk() and get_wchan().
 
+config LLVM_POLLY
+	bool "Enable LLVM's polyhedral loop optimizer (Polly)"
+	help
+	  This option enables LLVM's polyhedral loop optimizer known as Polly.
+	  Polly is able to optimize various loops throughout the kernel for
+	  maximum cache locality. This requires an LLVM toolchain explicitly
+	  compiled with Polly support.
+
 menu "General setup"
 
 config ZENIFY
