dragonheart_defconfig: Enable MGLRU
- MGLRU patchset is applied, hence let's enable to use it.

Signed-off-by: Cyber Knight <cyberknight755@gmail.com>

--- a/arch/x86/configs/dragonheart_defconfig
+++ b/arch/x86/configs/dragonheart_defconfig
@@ -854,6 +854,7 @@ CONFIG_ARCH_HAS_ELFCORE_COMPAT=y
 CONFIG_ARCH_HAS_PARANOID_L1D_FLUSH=y
 CONFIG_DYNAMIC_SIGFRAME=y
 CONFIG_HAVE_ARCH_NODE_DEV_GROUP=y
+CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG=y
 
 #
 # GCOV-based kernel profiling
@@ -1081,6 +1082,9 @@ CONFIG_ARCH_HAS_PTE_SPECIAL=y
 CONFIG_MAPPING_DIRTY_HELPERS=y
 CONFIG_SECRETMEM=y
 CONFIG_ANON_VMA_NAME=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+# CONFIG_LRU_GEN_STATS is not set
 
 #
 # Data Access Monitoring
