--- a/arch/x86/configs/dragonheart_defconfig
+++ b/arch/x86/configs/dragonheart_defconfig
@@ -4536,6 +4536,96 @@ CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYUSB=m
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
+# CONFIG_RANDOM_DEFAULT_IMPL is not set
+CONFIG_LRNG=y
+
+#
+# Linux Random Number Generator Configuration
+#
+CONFIG_LRNG_SHA256=y
+CONFIG_LRNG_COMMON_DEV_IF=y
+CONFIG_LRNG_DRNG_ATOMIC=y
+CONFIG_LRNG_SYSCTL=y
+CONFIG_LRNG_RANDOM_IF=y
+
+#
+# LRNG Interfaces
+#
+CONFIG_LRNG_KCAPI_IF=y
+CONFIG_LRNG_HWRAND_IF=m
+CONFIG_LRNG_DEV_IF=y
+# end of LRNG Interfaces
+
+#
+# Entropy Source Configuration
+#
+# CONFIG_LRNG_RUNTIME_ES_CONFIG is not set
+
+#
+# Common Timer-based Entropy Source Configuration
+#
+CONFIG_LRNG_IRQ_DFLT_TIMER_ES=y
+# CONFIG_LRNG_SCHED_DFLT_TIMER_ES is not set
+CONFIG_LRNG_TIMER_COMMON=y
+# CONFIG_LRNG_COLLECTION_SIZE_32 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_256 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_512 is not set
+CONFIG_LRNG_COLLECTION_SIZE_1024=y
+# CONFIG_LRNG_COLLECTION_SIZE_2048 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_4096 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_8192 is not set
+CONFIG_LRNG_COLLECTION_SIZE=1024
+# CONFIG_LRNG_HEALTH_TESTS is not set
+CONFIG_LRNG_RCT_CUTOFF=31
+CONFIG_LRNG_APT_CUTOFF=325
+
+#
+# Interrupt Entropy Source
+#
+CONFIG_LRNG_IRQ=y
+CONFIG_LRNG_CONTINUOUS_COMPRESSION_ENABLED=y
+# CONFIG_LRNG_CONTINUOUS_COMPRESSION_DISABLED is not set
+CONFIG_LRNG_ENABLE_CONTINUOUS_COMPRESSION=y
+# CONFIG_LRNG_SWITCHABLE_CONTINUOUS_COMPRESSION is not set
+CONFIG_LRNG_IRQ_ENTROPY_RATE=256
+
+#
+# Jitter RNG Entropy Source
+#
+# CONFIG_LRNG_JENT is not set
+
+#
+# CPU Entropy Source
+#
+CONFIG_LRNG_CPU=y
+CONFIG_LRNG_CPU_FULL_ENT_MULTIPLIER=1
+CONFIG_LRNG_CPU_ENTROPY_RATE=8
+
+#
+# Scheduler Entropy Source
+#
+CONFIG_LRNG_SCHED=y
+CONFIG_LRNG_SCHED_ENTROPY_RATE=4294967295
+
+#
+# Kernel RNG Entropy Source
+#
+# end of Entropy Source Configuration
+
+CONFIG_LRNG_DRNG_CHACHA20=y
+CONFIG_LRNG_DRNG_KCAPI=y
+CONFIG_LRNG_SWITCH=y
+CONFIG_LRNG_SWITCH_HASH=y
+CONFIG_LRNG_HASH_KCAPI=y
+CONFIG_LRNG_SWITCH_DRNG=y
+# CONFIG_LRNG_SWITCH_DRBG is not set
+CONFIG_LRNG_SWITCH_DRNG_KCAPI=y
+CONFIG_LRNG_DFLT_DRNG_CHACHA20=y
+# CONFIG_LRNG_DFLT_DRNG_DRBG is not set
+# CONFIG_LRNG_DFLT_DRNG_KCAPI is not set
+# CONFIG_LRNG_TESTING_MENU is not set
+# CONFIG_LRNG_SELFTEST is not set
+# end of Linux Random Number Generator Configuration
 # end of Character devices
 
 #
