--- a/lib/zstd/Makefile
+++ b/lib/zstd/Makefile
@@ -11,6 +11,8 @@
 obj-$(CONFIG_ZSTD_COMPRESS) += zstd_compress.o
 obj-$(CONFIG_ZSTD_DECOMPRESS) += zstd_decompress.o
 
+ccflags-y += -Wno-error=deprecated-declarations
+
 zstd_compress-y := \
 		zstd_compress_module.o \
 		common/debug.o \
@@ -39,6 +41,7 @@ zstd_decompress-y := \
 		common/fse_decompress.o \
 		common/zstd_common.o \
 		decompress/huf_decompress.o \
+		decompress/huf_decompress_amd64.o \
 		decompress/zstd_ddict.o \
 		decompress/zstd_decompress.o \
 		decompress/zstd_decompress_block.o \
