dragonheart_defconfig: Enable MGLRU
- MGLRU patchset is applied, hence let's enable to use it.

Signed-off-by: Cyber Knight <cyberknight755@gmail.com>

--- a/arch/x86/configs/dragonheart_defconfig
+++ b/arch/x86/configs/dragonheart_defconfig
@@ -857,6 +857,7 @@ CONFIG_ARCH_HAS_ELFCORE_COMPAT=y
 CONFIG_ARCH_HAS_PARANOID_L1D_FLUSH=y
 CONFIG_DYNAMIC_SIGFRAME=y
 CONFIG_HAVE_ARCH_NODE_DEV_GROUP=y
+CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG=y
 
 #
 # GCOV-based kernel profiling
@@ -1019,7 +1020,6 @@ CONFIG_COMPACTION=y
 CONFIG_PAGE_REPORTING=y
 CONFIG_MIGRATION=y
 CONFIG_DEVICE_MIGRATION=y
-CONFIG_ARCH_ENABLE_HUGEPAGE_MIGRATION=y
 CONFIG_ARCH_ENABLE_THP_MIGRATION=y
 CONFIG_CONTIG_ALLOC=y
 CONFIG_PHYS_ADDR_T_64BIT=y
@@ -1088,6 +1088,9 @@ CONFIG_ARCH_HAS_PTE_SPECIAL=y
 CONFIG_MAPPING_DIRTY_HELPERS=y
 CONFIG_SECRETMEM=y
 CONFIG_ANON_VMA_NAME=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+# CONFIG_LRU_GEN_STATS is not set
 
 #
 # Data Access Monitoring
@@ -5242,7 +5245,6 @@ CONFIG_INTEL_BXT_PMIC_THERMAL=m
 CONFIG_INTEL_PCH_THERMAL=m
 CONFIG_INTEL_TCC_COOLING=m
 CONFIG_INTEL_MENLOW=m
-CONFIG_INTEL_HFI_THERMAL=y
 # end of Intel thermal drivers
 
 CONFIG_GENERIC_ADC_THERMAL=m
