--- a/arch/x86/configs/dragonheart_defconfig
+++ b/arch/x86/configs/dragonheart_defconfig
@@ -22,7 +22,7 @@ CONFIG_PAHOLE_VERSION=123
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
-CONFIG_LLVM_POLLY=y
+# CONFIG_LLVM_POLLY is not set
 
 #
 # General setup
